Migrating to JUnit5 and Java 11